# roq-binance

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile.am  README.md  TODO  configure.ac  roq-binance.pc.in
benchmark/: .gitignore  CMakeLists.txt  Makefile.am  json_cancel_order.cpp  json_new_order.cpp
conda/: meta.yaml  run_test.sh
docker/: Dockerfile  README.md
share/: config.toml
share/flags/prod/: flags.cfg
share/flags/prod-us/: flags.cfg
share/flags/test/: flags.cfg
src/roq/: CMakeLists.txt  Makefile.am
src/roq/binance/: .gitignore  CMakeLists.txt  MEMORY  Makefile.am  README.md  account.cpp  account.hpp  api.cpp  api.hpp  application.cpp  application.h  application.hpp  authenticator.cpp  authenticator.hpp  config.cpp  config.h  config.hpp  depdiko.sh  drop_copy.cpp  drop_copy.h  drop_copy.hpp  drop_copy_2.cpp  drop_copy_2.hpp  drop_copy_margin.cpp  drop_copy_margin.hpp  drop_copy_portfolio.cpp  drop_copy_portfolio.hpp  drop_copy_simple.cpp  drop_copy_simple.hpp  drop_copy_state.hpp  drop_copy_state.json  drop_copy_state_margin.hpp  drop_copy_state_margin.json  flags.cpp  flags.h  flags.hpp  flags.json  gateway.cpp  gateway.h  gateway.hpp  (+62 more)
src/roq/binance/api/: Makefile.am  enums.cpp  enums.h  utils.cpp  utils.h
src/roq/binance/benchmark/: CMakeLists.txt  json_cancel_order.cpp  json_new_order.cpp
src/roq/binance/config/: binance-us.toml  binance.toml  depdiko.toml  rencap.toml
src/roq/binance/fix_bridge/: .gitignore  application.cpp  application.hpp  config.cpp  config.hpp  live.sh  main.cpp  settings.cpp  settings.hpp
src/roq/binance/flags/: .gitignore  CMakeLists.txt  common.json  download.json  flags.json  mbp.json  misc.json  oms.json  request.json  rest.json  settings.cpp  settings.hpp  ws.json  ws_api.json
src/roq/binance/gateway/: CMakeLists.txt  account.cpp  account.hpp  api.cpp  api.hpp  config.cpp  config.hpp  controller.cpp  controller.hpp  drop_copy.hpp  drop_copy_margin.cpp  drop_copy_margin.hpp  drop_copy_portfolio.cpp  drop_copy_portfolio.hpp  drop_copy_state_margin.hpp  market_data.cpp  market_data.hpp  order_entry.hpp  order_entry_margin.cpp  order_entry_margin.hpp  order_entry_portfolio.cpp  order_entry_portfolio.hpp  request.hpp  rest.cpp  rest.hpp  settings.hpp  shared.cpp  shared.hpp  utils.hpp  web_socket.cpp  web_socket.hpp
src/roq/binance/json/: .gitignore  CMakeLists.txt  Makefile.am  account.cpp  account.h  account.json  account_ack.json  accounts.cpp  accounts.h  activate.cpp  activate.h  agg_trade.json  agg_trade_data.json  amended_order.json  balance.json  balance2.json  balance_update.json  balance_update_data.json  balances.json  balances_ack.json  balances_item.json  book_ticker.json  book_ticker_data.json  cancel_all_open_orders.json  cancel_all_open_orders_ack.json  cancel_order.json  cancel_order_ack.json  cancel_order_template.hpp  cancel_replace_mode.json  cancel_replace_order.json  cancel_replace_order_ack.json  cancel_replace_order_error.json  cancel_restrictions.json  change.cpp  change.h  create_order_template.hpp  cross_margin_account.json  currency.cpp  currency.h  depth.json  (+162 more)
src/roq/binance/protocol/json/: .gitignore  CMakeLists.txt  account_ack.json  agg_trade.json  agg_trade_data.json  amended_order.json  balance.json  balance2.json  balance_update.json  balance_update_data.json  balances_ack.json  balances_item.json  book_ticker.json  book_ticker_data.json  cancel_all_open_orders_ack.json  cancel_order_ack.json  cancel_order_template.hpp  cancel_replace_mode.json  cancel_replace_order_ack.json  cancel_replace_order_error.json  cancel_restrictions.json  create_order_template.hpp  cross_margin_account.json  depth.json  depth_ack.json  depth_data.json  depth_item.json  depth_update.json  depth_update_data.json  encoder.cpp  encoder.hpp  error.json  error_error.json  event_type.json  exchange_filter.json  exchange_info_ack.json  execution_report.json  execution_report_data.json  execution_type.json  field.json  (+70 more)
src/roq/binance/test/: CMakeLists.txt  json_account.cpp  json_cancel_all_open_orders.cpp  json_cancel_order.cpp  json_cancel_replace_order.cpp  json_depth_update.cpp  json_exchange_info.cpp  json_execution_report.cpp  json_filters.cpp  json_listen_key.cpp  json_new_order.cpp  json_open_orders.cpp  json_outbound_account_position.cpp  json_ping.cpp  json_ws_api_request.cpp  json_ws_listen_key.cpp  json_ws_order_cancel_replace.cpp  json_wsapi_request.cpp  tools_crypto.cpp
src/roq/binance/tools/: CMakeLists.txt  crypto.cpp  crypto.hpp  hasher.cpp  hasher.h  hasher.hpp
test/: .gitignore  CMakeLists.txt  MISSING  Makefile.am  json_account.cpp  json_account_ack.cpp  json_agg_trade.cpp  json_book_ticker.cpp  json_cancel_all_open_orders.cpp  json_cancel_all_open_orders_ack.cpp  json_cancel_order.cpp  json_cancel_order_ack.cpp  json_cancel_replace_order.cpp  json_cancel_replace_order_ack.cpp  json_depth_update.cpp  json_encoder.cpp  json_error.cpp  json_exchange_info.cpp  json_exchange_info_ack.cpp  json_execution_report.cpp  json_filters.cpp  json_listen_key.cpp  json_listen_key_ack.cpp  json_mini_ticker.cpp  json_new_order.cpp  json_new_order_ack.cpp  json_open_orders.cpp  json_open_orders_ack.cpp  json_outbound_account_position.cpp  json_ping.cpp  json_result.cpp  json_server_shutdown.cpp  json_session_logon.cpp  json_ws_api_request.cpp  json_ws_listen_key.cpp  json_ws_order_cancel_replace.cpp  json_wsapi_account.cpp  json_wsapi_cancel_open_orders.cpp  json_wsapi_cancel_order.cpp  json_wsapi_event_stream_terminated.cpp  (+13 more)
